Fix footer. Unfortunetaly it is not responsive anymore.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -44,8 +44,15 @@ ul.menu li {
   display: inline;
 }
 
-.footer {
-  margin-top: 0px;
+.bs-header, .bs-masthead, .receba-main {
+  min-height: 500px;
+}
+
+footer {
+  position: relative;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
 }
 
 .btn {
